--- a/data-holder/Dockerfile
+++ b/data-holder/Dockerfile
@@ -1,8 +1,10 @@
 FROM openjdk:8-jre
 MAINTAINER Data61 <cdr-data61@csiro.au>
 
-EXPOSE 8080/tcp
+EXPOSE 8443/tcp
+EXPOSE 8383/tcp
 
+ADD keystore /keystore
 ADD payloads /payloads
 ARG JAR_FILE
 ADD target/${JAR_FILE} /opt/cds-java-artefacts/data-holder.jar
